# react-os-rust

./: .gitignore  CHANGES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build-and-run.sh  manual_test.sh  run_interactive.sh  run_tests.sh  test_exe.sh  test_fixes.sh  test_kernel.sh  test_storage_registration.rs  todo.md  x86_64-rust_os.json
kernel/: Cargo.toml
kernel/examples/: interrupt_demo.rs
kernel/src/: allocator.rs  cmd_shell.rs  cpu.rs  enhanced_shell.rs  gdt.rs  interrupts.rs  main.rs  numa.rs  perf.rs  serial.rs  task.rs  test_runner.rs  time.rs  timer.rs  vga_buffer.rs
kernel/src/acpi/: apic.rs  mod.rs  pci.rs  power.rs  tables.rs
kernel/src/ahci/: command.rs  fis.rs  hba.rs  mod.rs  port.rs
kernel/src/arch/: mod.rs
kernel/src/benchmarks/: mod.rs
kernel/src/bluetooth/: mod.rs
kernel/src/browser/: Makefile  README.md  engine.c  engine.h
kernel/src/container/: cgroup.rs  mod.rs  namespace.rs
kernel/src/crypto/: aead.rs  asymmetric.rs  cipher.rs  errors.rs  hash.rs  hw_accel.rs  kdf.rs  mac.rs  mod.rs  rng.rs  tests.rs
kernel/src/debug/: kasan.rs  kdb.rs  kdump.rs  kgdb.rs  memleak.rs  mod.rs  profiler.rs  symbols.rs  sysrq.rs  trace.rs  watchdog.rs
kernel/src/driver/: bus.rs  dma.rs  hotplug.rs  interrupt.rs  mod.rs  model.rs  power.rs  probe.rs  safety.rs  userspace.rs
kernel/src/drivers/: audio.rs  disk.rs  display.rs  input.rs  mod.rs  mouse.rs  network.rs  pci.rs  power.rs  printing.rs  storage.rs  usb.rs
kernel/src/fs/: crypto.rs  fat32.rs  file_ops.rs  mod.rs  vfs.rs
userspace/rpkg/: Cargo.toml
(+372 files in other folders)
