[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_kernel"
test = false
bench = false

[dependencies]
bootloader = { workspace = true }
x86_64 = { workspace = true }
volatile = { workspace = true }
spin = { workspace = true }
uart_16550 = { workspace = true }
pic8259 = { workspace = true }
pc-keyboard = { workspace = true }
linked_list_allocator = "0.10"
bitflags = "2.0"
raw-cpuid = "11.0"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300