[package]
name = "rpkg"
version = "1.0.0"
edition = "2021"
authors = ["RustOS Contributors"]
description = "Package manager for RustOS"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.0"
indicatif = "0.17"
prettytable-rs = "0.10"
humansize = "2.1"
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"
walkdir = "2.4"
regex = "1.10"
semver = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempdir = "0.3"

[[bin]]
name = "rpkg"
path = "src/main.rs"